Fix overlap between form and calendar

--- a/src/css/SubmitForm.css
+++ b/src/css/SubmitForm.css
@@ -37,14 +37,16 @@ padding: 10px;
 text-align: left;
 width: 200px
 }
+
 .mapContainer {
-  position: absolute;
+  position: fixed;
   top: 22%;
   right: 10%;
   left: 40%;
   bottom: 25%;
+  margin-left: 100px;
   border-style: solid;
-  border-radius: 0px 20px 20px 20px;
+  border-radius: 20px 20px 20px 20px;
 }
 
 .calendarContainer {
@@ -57,22 +59,20 @@ width: 200px
 
 .formContainer {
   background: #404040;
-  position: absolute;
-  height: 290px;
-  width: 350px;
-  top: 48%;
-  right: 40%;
-  left: 10%;
-  bottom: 25%;
-  border-radius: 0px 20px 20px 20px;
+  position: fixed;
+  margin-top: 10px;
+  padding-top: 10px;
+  padding-left: 10px;
+  height: 250px;
+  width: 340px;
+  border-radius: 20px 20px 20px 20px;
 }
 .hoursContainer {
-  position: absolute;
+  position: fixed;
+  padding-top: 10px;
+  padding-left: 10px;
+  margin-top: 80px;
   width: 350px;
-  top: 55%;
-  right: 40%;
-  left: 10%;
-  bottom: 25%;
 
 }
 
@@ -104,3 +104,6 @@ width: 200px
   font-size: 18px;
 }
 
+#spanController {
+  margin-top: 20px;
+}
